# bless

./: Cargo.toml  README.md
src/: errors.rs  file_buffer.rs  file_view.rs  main.rs  term.rs  ui.rs  utils.rs
src/file_buffer/: bzip2.rs  devec.rs  mod.rs  raw.rs
src/file_view/: buffered_file_view.rs  errors.rs  file_view.rs  mod.rs
src/ui/: backend.rs  errors.rs  frontend.rs  mod.rs
src/utils/: algorithm.rs  infinite_loop_breaker.rs  language.rs  mod.rs  text.rs  utf8.rs
