[package]
name = "bless"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.17"
crossterm = { version = "0.22", features = ["event-stream"] }
bzip2 = "0.4"
regex = "1"
atty = "0.2.14"
signal-hook = "0.3.13"
signal-hook-async-std = "0.2.2"
clap = { version = "3.0.14", features = ["derive"] }
human_bytes = { version = "0.3", features = ["fast"] }
futures = "0.3.21"
async-trait = "0.1.52"
tokio = { version = "1.16.1", features = ["full"] }
num-integer = "0.1.44"
memmap2 = "0.5.3"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
unicode-width = "0.1.7"
